comp-transform/testsuite/bad/NoPragma/NoPragma.hs
module NoPragma where 

piececategory A
